add contact function
